<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.password.PasswordFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:id="@+id/root"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/et_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_size_16dp"
                android:layout_marginTop="@dimen/padding_size_16dp"
                android:layout_marginEnd="@dimen/padding_size_16dp"
                android:background="@drawable/square_edit_text"
                android:hint="@string/label_old_password"
                android:inputType="textPassword"
                android:padding="@dimen/padding_size_16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Autofill,LabelFor,TextFields" />

        <EditText
                android:id="@+id/et_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_size_16dp"
                android:layout_marginTop="@dimen/padding_size_16dp"
                android:layout_marginEnd="@dimen/padding_size_16dp"
                android:background="@drawable/square_edit_text"
                android:hint="@string/label_new_password"
                android:inputType="textPassword"
                android:padding="@dimen/padding_size_16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_old_password"
                tools:ignore="Autofill,TextFields" />

        <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_size_16dp"
                android:layout_marginTop="@dimen/padding_size_16dp"
                android:layout_marginEnd="@dimen/padding_size_16dp"
                android:background="@drawable/square_edit_text"
                android:hint="@string/label_confirm_password"
                android:inputType="textPassword"
                android:padding="@dimen/padding_size_16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_new_password"
                tools:ignore="Autofill,TextFields" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_size_16dp"
                android:layout_marginTop="@dimen/padding_size_16dp"
                android:layout_marginEnd="@dimen/padding_size_16dp"
                android:layout_marginBottom="@dimen/padding_size_16dp"
                android:padding="@dimen/padding_size_16dp"
                android:text="@string/label_change_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_confirm_password" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>